--- a/www/index.html
+++ b/www/index.html
@@ -116,7 +116,7 @@
 <form ng-submit="doLogin()">
 
   <label class="item item-input">
-    <span class="input-label">Username</span>
+    <span class="input-label">Email</span>
     <input type="text" ng-model="loginData.username">
   </label>
   <label class="item item-input">
