simple json format with modal included

--- a/www/snippets/index_modal.html
+++ b/www/snippets/index_modal.html
@@ -5,9 +5,9 @@
         </ion-header-bar>
        <ion-content class="padding">
            <br>
-           ascsdc
+           Modal:
            <br>
-
+           
           <h3>ID: {{story.id}},<br> 
           User Name: {{story.un}}<br> 
 
